fix: calibration issues and added blink threshold